cloud/w10/lab/gatekeeper/constraints/01-no-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: no-latest-tag
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  enforcementAction: warn
match:
  kinds:
  - apiGroups: [""]
    kinds:
      - Pod
  - apiGroups: ["apps"]
    kinds:
      - Deployment
  - apiGroups: ["argoproj.io"]
    kinds:
      - Rollout
  parameters:
    tags: ["latest"]
