cloud/w10/lab/gatekeeper/constraints/02-require-limits.yaml
# Rule 02: Bắt buộc có resources.limits
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: require-resource-limits
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: warn
  match:
    kinds:
    - apiGroups: [""]
      kinds:
        - Pod
  parameters:
    limits:
      - cpu
      - memory
