cloud/w10/lab/gatekeeper/constraints/03-no-root-user.yaml
# Rule 03: Cấm runAsUser: 0 (chạy root)
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: no-root-user
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: warn
  match:
    kinds:
    - apiGroups: [""]
      kinds:
        - Pod
