cloud/w10/lab/gatekeeper/constraints/04-no-host-network.yaml
# Cấm hostNetwork: true
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: no-host-network
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: warn
  match:
    kinds:
    - apiGroups: [""]
      kinds:
        - Pod
