cloud/w10/lab/gatekeeper/constraints/05-k8s-allowed-registry.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRegistry
metadata:
  name: allowed-registry-ghcr
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  enforcementAction: warn
match:
  kinds:
  - apiGroups: [""]
    kinds:
      - Pod
  - apiGroups: ["apps"]
    kinds:
      - Deployment
  - apiGroups: ["argoproj.io"]
    kinds:
      - Rollout
    namespaces:
    - "demo"   
  parameters:
    allowedRegistries:
    - "ghcr.io/buithanhnghiadtu19122004/"
